@@ -2,50 +2,31 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>aliyun-maxcompute-data-collectors</artifactId>
-        <groupId>com.aliyun</groupId>
-        <version>2.0.5</version>
-    </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.aliyun.odps</groupId>
     <artifactId>spark-connector</artifactId>
-    <version>${project.version}</version>
+    <version>4.0.1-odps0.56.0</version>
+    <packaging>pom</packaging>
+
     <modules>
         <module>common</module>
         <module>datasource</module>
     </modules>
 
-    <packaging>pom</packaging>
     <properties>
-        <arrow.version>4.0.0</arrow.version>
-        <odps.version>0.47.0</odps.version>
-        <project.version>${spark.version}-odps${odps.version}</project.version>
-        <odps.sdk.version>0.50.5-public</odps.sdk.version>
-        <odps.sdk.table.version>0.50.5-public</odps.sdk.table.version>
-        <spark.version>3.4.3</spark.version>
-        <scala.version>2.12.10</scala.version>
-        <scala.binary.version>2.12</scala.binary.version>
-        <java.version>1.8</java.version>
+        <odps.version>0.56.0</odps.version>
+        <project.version>4.0.1-odps0.56.0</project.version>
+        <arrow.version>17.0.0</arrow.version>
+        <odps.sdk.version>0.56.0-public</odps.sdk.version>
+        <odps.sdk.table.version>0.56.0-public</odps.sdk.table.version>
+        <spark.version>4.0.1</spark.version>
+        <scala.version>2.13.16</scala.version>
+        <scala.binary.version>2.13</scala.binary.version>
+        <java.version>17</java.version>
         <PermGen>512m</PermGen>
         <MaxPermGen>1024m</MaxPermGen>
     </properties>
-
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>com.aliyun.odps</groupId>
-                <artifactId>odps-sdk-core</artifactId>
-                <version>${odps.sdk.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.aliyun.odps</groupId>
-                <artifactId>odps-sdk-table-api</artifactId>
-                <version>${odps.sdk.table.version}</version>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
 
     <dependencies>
         <dependency>
@@ -57,7 +38,25 @@
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-all</artifactId>
-            <version>4.1.74.Final</version>
+            <version>4.1.118.Final</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.antlr</groupId>
+            <artifactId>antlr4-runtime</artifactId>
+            <version>4.9.3</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.codehaus.janino</groupId>
+            <artifactId>janino</artifactId>
+            <version>3.1.9</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.codehaus.janino</groupId>
+            <artifactId>commons-compiler</artifactId>
+            <version>3.1.9</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -72,7 +71,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>3.1.1</version>
+                <version>3.5.0</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
@@ -93,26 +92,39 @@
                                     <include>xpp3:xpp3</include>
                                     <include>org.lz4:lz4-pure-java</include>
                                     <include>net.sourceforge.javacsv:javacsv</include>
+                                    <include>com.google.code.gson:gson</include>
+                                    <!-- for credential and tea -->
+                                    <include>com.aliyun:tea</include>
+                                    <include>com.aliyun:tea-util</include>
+                                    <include>com.aliyun:credentials-api</include>
+                                    <include>com.aliyun:credxentials-java</include>
                                     <!-- for arrow -->
                                     <include>org.apache.arrow:*</include>
                                     <include>com.google.flatbuffers:*</include>
                                     <include>io.netty:netty-buffer</include>
                                     <include>io.netty:netty-common</include>
+                                    <!-- for okhttp -->
+                                    <include>com.squareup.okhttp3:*</include>
+                                    <include>com.squareup.okio:*</include>
                                 </includes>
                             </artifactSet>
                             <relocations>
                                 <!-- TODO: // for arrow -->
                                 <relocation>
                                     <pattern>org.apache.arrow</pattern>
-                                    <shadedPattern>spark.odps.runtime.org.apache.arrow</shadedPattern>
+                                    <shadedPattern>cupid_runtime.org.apache.arrow</shadedPattern>
                                 </relocation>
                                 <relocation>
                                     <pattern>io.netty</pattern>
-                                    <shadedPattern>spark.odps.runtime.io.netty</shadedPattern>
+                                    <shadedPattern>cupid_runtime.io.netty</shadedPattern>
                                 </relocation>
                                 <relocation>
                                     <pattern>com.google.flatbuffers</pattern>
-                                    <shadedPattern>spark.odps.runtime.com.google.flatbuffers</shadedPattern>
+                                    <shadedPattern>cupid_runtime.com.google.flatbuffers</shadedPattern>
+                                </relocation>
+                                <relocation>
+                                    <pattern>com.google.gson</pattern>
+                                    <shadedPattern>cupid_runtime.com.google.gson</shadedPattern>
                                 </relocation>
                             </relocations>
                             <filters>
@@ -130,6 +142,7 @@
                                         implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
                                     <resource>reference.conf</resource>
                                 </transformer>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
                             </transformers>
                         </configuration>
                     </execution>
@@ -158,13 +171,14 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.8</version>
+                <version>3.6.3</version>
                 <configuration>
                     <encoding>UTF-8</encoding>
                 </configuration>
                 <executions>
                     <execution>
                         <id>attach-javadocs</id>
+                        <phase>deploy</phase>
                         <goals>
                             <goal>jar</goal>
                         </goals>
@@ -183,21 +197,6 @@
                 </configuration>
             </plugin>
 
-            <!--            <plugin>-->
-            <!--                <groupId>org.apache.maven.plugins</groupId>-->
-            <!--                <artifactId>maven-gpg-plugin</artifactId>-->
-            <!--                <version>1.5</version>-->
-            <!--                <executions>-->
-            <!--                    <execution>-->
-            <!--                        <id>sign-artifacts</id>-->
-            <!--                        <phase>verify</phase>-->
-            <!--                        <goals>-->
-            <!--                            <goal>sign</goal>-->
-            <!--                        </goals>-->
-            <!--                    </execution>-->
-            <!--                </executions>-->
-            <!--            </plugin>-->
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
@@ -207,7 +206,7 @@
             <plugin>
                 <groupId>net.alchim31.maven</groupId>
                 <artifactId>scala-maven-plugin</artifactId>
-                <version>4.4.0</version>
+                <version>4.9.2</version>
                 <executions>
                     <execution>
                         <id>scala-compile-first</id>
@@ -243,8 +242,8 @@
                     <jvmArgs>
                         <jvmArg>-Xms1024m</jvmArg>
                         <jvmArg>-Xmx1024m</jvmArg>
-                        <jvmArg>-XX:PermSize=${PermGen}</jvmArg>
-                        <jvmArg>-XX:MaxPermSize=${MaxPermGen}</jvmArg>
+                        <jvmArg>-XX:MetaspaceSize=${PermGen}</jvmArg>
+                        <jvmArg>-XX:MaxMetaspaceSize=${MaxPermGen}</jvmArg>
                     </jvmArgs>
                     <javacArgs>
                         <javacArg>-source</javacArg>
